--- a/Python-Ch05 函式.html
+++ b/Python-Ch05 函式.html
@@ -72,10 +72,7 @@
                 </li>
 
             </ul>
-            <form class="form-inline my-2 my-lg-0">
-                <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-            </form>
+
         </div>
     </nav>
 
@@ -185,12 +182,7 @@
                     <div class="btn-toolbar mb-2 mb-md-0">
                         <div class="btn-group mr-2">
                             <button type="button" class="btn btn-sm btn-outline-secondary">Share</button>
-                            <button type="button" class="btn btn-sm btn-outline-secondary">Export</button>
                         </div>
-                        <button type="button" class="btn btn-sm btn-outline-secondary dropdown-toggle">
-                            <span data-feather="calendar"></span>
-                            This week
-                        </button>
                     </div>
                 </div>
                 <h2>索引</h2>
@@ -209,8 +201,9 @@
                     <hr>        
                 </div> <!-- /container -->
                 <h3 id="4-1">5-1 函式的定義</h3>
+                <p></p>
                 <h4>語法:</h4>
-                <p>while的迴圈敘述如下:</p>
+                <p></p>
                 <pre class="wp-block-fm-prism line-numbers">
                     <code class="language-textile">
                         def 函式名稱(引數1, 引數2, 引數3.....)
@@ -219,7 +212,7 @@
                     </code>         
                 </pre>
                 <p>傳寫一個程式產生10個亂數，程式如下所示:</p>
-                <h4>範例程式</h4>
+                <h4>範例程式:</h4>
                 <pre class="wp-block-fm-prism line-numbers">
                     <code class="language-python ">
                         def printStar(n):
@@ -234,6 +227,7 @@
                         main()
                     </code>         
                 </pre>
+                <p></p>
                 <h4>輸出結果:</h4>
                 <pre class="wp-block-fm-prism line-numbers">
                     <code class="language-textile">
@@ -242,6 +236,7 @@
                         * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *
                     </code>         
                 </pre>
+                <p></p>
                 <h3 id="5-2">5-2 沒有參數也沒有回傳值</h3>
                 <p>當迴圈有固定的執行次數時，我們稱之為定數迴圈。例如:</p>
                 <h4>範例程式</h4>
@@ -258,6 +253,7 @@
                         main()
                     </code>         
                 </pre>
+                <p></p>
                 <h4>輸出結果:</h4>
                 <pre class="wp-block-fm-prism line-numbers">
                     <code class="language-textile">
@@ -265,15 +261,19 @@
                     </code>         
                 </pre>
                 <p>如果要檢視所產生的的亂數中有多少個偶數或是奇數，此時就須配合選擇敘述做判斷，如以下程式碼:</p>
+                <p></p>
                 <h3 id="5-3">5-3 函式回傳值</h3>
-                <p>敘述</p>
+                <p></p>
                 <h4>語法:</h4>
                 <pre class="wp-block-fm-prism line-numbers">
-                    <code class="language-textile">
-                        /code/
+                    <code class="language-python">
+                    def 函式名稱():
+                        執行內容
+                        return 回傳結果
                     </code>         
                 </pre>
-                <h4>範例程式</h4>
+                <p></p>
+                <h4>範例程式:</h4>
                 <pre class="wp-block-fm-prism line-numbers">
                     <code class="language-python">
                         def total():
@@ -289,21 +289,25 @@
                         main()
                     </code>         
                 </pre>
+                <p></p>
                 <h4>輸出結果:</h4>
                 <pre class="wp-block-fm-prism line-numbers">
                     <code class="language-textile">
                         summation of 1 to 100: 5050
                     </code>         
                 </pre>
-                <p>continue</p>
-                <h3 id="5-4">5-4 函式回傳值</h3>
-                <p>敘述</p>
+                <p></p>
+                <h3 id="5-4">5-4 帶有參數和回傳值</h3>
+                <p></p>
                 <h4>語法:</h4>
                 <pre class="wp-block-fm-prism line-numbers">
-                    <code class="language-textile">
-                        /code/
+                    <code class="language-python">
+                        def 函式名稱(參數1, 參數2...):
+                            執行內容
+                            return 回傳結果
                     </code>         
                 </pre>
+                <p></p>
                 <h4>範例程式</h4>
                 <pre class="wp-block-fm-prism line-numbers">
                     <code class="language-python">
@@ -322,6 +326,7 @@
                         main()
                     </code>         
                 </pre>
+                <p></p>
                 <h4>輸出結果:</h4>
                 <p>(一)</p>
                 <pre class="wp-block-fm-prism line-numbers">
@@ -339,12 +344,15 @@
                         summation of 1 to 101: 5151                      
                     </code>         
                 </pre>
+                <p></p>
                 <h3 id="5-5">5-5 回傳多個值</h3>
-                <p>敘述</p>
+                <p></p>
                 <h4>語法:</h4>
                 <pre class="wp-block-fm-prism line-numbers">
-                    <code class="language-textile">
-                        /code/
+                    <code class="language-python">
+                        def 函式名稱(參數1, 參數2...):
+                            執行內容
+                            return 結果1, 結果2...
                     </code>         
                 </pre>
                 <h4>範例程式</h4>
@@ -375,11 +383,13 @@
                     </code>         
                 </pre>
                 <h3 id="5-6">5-6 函式預設參數值</h3>
-                <p>敘述</p>
+                <p>使用函式時，可以輸入參數，若不輸入參數，則系統則以預測值的內容去做計算。</p>
                 <h4>語法:</h4>
                 <pre class="wp-block-fm-prism line-numbers">
-                    <code class="language-textile">
-                        /code/
+                    <code class="language-python">
+                        def 函式名稱(參數1 = 預設值, 參數2...):
+                            執行內容
+                            return 結果1, 結果2...
                     </code>         
                 </pre>
                 <h4>範例程式</h4>
