--- a/Python-Ch04 進階流程控制.html
+++ b/Python-Ch04 進階流程控制.html
@@ -73,10 +73,7 @@
                 </li>
 
             </ul>
-            <form class="form-inline my-2 my-lg-0">
-                <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-            </form>
+
         </div>
     </nav>
 
@@ -186,12 +183,7 @@
                     <div class="btn-toolbar mb-2 mb-md-0">
                         <div class="btn-group mr-2">
                             <button type="button" class="btn btn-sm btn-outline-secondary">Share</button>
-                            <button type="button" class="btn btn-sm btn-outline-secondary">Export</button>
                         </div>
-                        <button type="button" class="btn btn-sm btn-outline-secondary dropdown-toggle">
-                            <span data-feather="calendar"></span>
-                            This week
-                        </button>
                     </div>
                 </div>
                 <h2>索引</h2>
@@ -207,8 +199,9 @@
                     <hr>        
                 </div> <!-- /container -->
                 <h3 id="4-1">4-1 亂數產生器</h3>
+                <p></p>
                 <p>傳寫一個程式產生10個亂數，程式如下所示:</p>
-                <h4>範例程式</h4>
+                <h4>範例程式:</h4>
                 <pre class="wp-block-fm-prism line-numbers">
                     <code class="language-python ">
                         import random
@@ -217,14 +210,16 @@
                             print('%4d' % randNum, end =' ')
                     </code>         
                 </pre>
+                <p></p>
                 <h4>輸出結果:</h4>
                 <pre class="wp-block-fm-prism line-numbers">
                     <code class="language-textile">
                         91  100   42   14   67   43    5   26   33   46
                     </code>         
                 </pre>
+                <p></p>
                 <p>如果要檢視所產生的的亂數中有多少個偶數或是奇數，此時就須配合選擇敘述做判斷，如以下程式碼:</p>
-                <h4>範例程式</h4>
+                <h4>範例程式:</h4>
                 <pre class="wp-block-fm-prism line-numbers">
                     <code class="language-python ">
                         import random
@@ -241,6 +236,7 @@
                         print('\neven = %d, odd = %d' % (even, odd))                        
                     </code>         
                 </pre>
+                <p></p>
                 <h4>輸出結果:</h4>
                 <pre class="wp-block-fm-prism line-numbers">
                     <code class="language-textile">
@@ -248,9 +244,12 @@
                         even = 5, odd = 5
                     </code>         
                 </pre>
+                <p></p>
                 <h3 id="4-2">4-2 定數迴圈與不定數迴圈</h3>
+                <p></p>
                 <p>當迴圈有固定的執行次數時，我們稱之為定數迴圈。例如:</p>
-                <h4>範例程式</h4>
+                <p></p>
+                <h4>範例程式:</h4>
                 <pre class="wp-block-fm-prism line-numbers">
                     <code class="language-python ">
                         import random
@@ -265,6 +264,7 @@
                         print('Over')
                     </code>         
                 </pre>
+                <p></p>
                 <h4>輸出結果:</h4>
                 <pre class="wp-block-fm-prism line-numbers">
                     <code class="language-textile">
@@ -282,7 +282,7 @@
                     </code>         
                 </pre>
                 <p>如果要檢視所產生的的亂數中有多少個偶數或是奇數，此時就須配合選擇敘述做判斷，如以下程式碼:</p>
-                <h4>範例程式</h4>
+                <h4>範例程式:</h4>
                 <pre class="wp-block-fm-prism line-numbers">
                     <code class="language-python ">
                         import random
@@ -299,6 +299,7 @@
                         print('\neven = %d, odd = %d' % (even, odd))                        
                     </code>         
                 </pre>
+                <p></p>
                 <h4>輸出結果:</h4>
                 <pre class="wp-block-fm-prism line-numbers">
                     <code class="language-textile">
@@ -306,15 +307,20 @@
                         even = 5, odd = 5
                     </code>         
                 </pre>
+                <p></p>
                 <h3 id="4-3">4-3 break 與 continue 敘述</h3>
-                <p>敘述</p>
+                <p></p>
+                <p>break表示中止執行包含此回區敘述的迴圈。若程式是無窮迴圈，則需要break敘述去中止它。</p>
                 <h4>語法:</h4>
                 <pre class="wp-block-fm-prism line-numbers">
                     <code class="language-textile">
-                        /code/
+                        while True:
+                            敘述1
+                            if 判斷式:
+                                break
                     </code>         
                 </pre>
-                <h4>範例程式</h4>
+                <h4>範例程式:</h4>
                 <pre class="wp-block-fm-prism line-numbers">
                     <code class="language-python">
                         import random
@@ -330,6 +336,7 @@
                         print(('Over'))
                     </code>         
                 </pre>
+                <p></p>
                 <h4>輸出結果:</h4>
                 <pre class="wp-block-fm-prism line-numbers">
                     <code class="language-textile">
@@ -344,7 +351,8 @@
                         Over
                     </code>         
                 </pre>
-                <p>continue</p>
+                <p></p>
+                <p>continue表示不繼續執行continue下的敘述，而直接回到迴圈的條件運算式進行判斷。</p>
                 <h4>範例程式:</h4>
                 <pre class="wp-block-fm-prism line-numbers">
                     <code class="language-python">
@@ -361,6 +369,7 @@
                         print('\ntotal = %d'%(total))
                     </code>         
                 </pre>
+                <p></p>
                 <h4>輸出結果:</h4>
                 <pre class="wp-block-fm-prism line-numbers">
                     <code class="language-textile">
