--- a/Python-Ch06 串列.html
+++ b/Python-Ch06 串列.html
@@ -71,10 +71,7 @@
                 </li>
 
             </ul>
-            <form class="form-inline my-2 my-lg-0">
-                <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-            </form>
+
         </div>
     </nav>
 
@@ -184,12 +181,7 @@
                     <div class="btn-toolbar mb-2 mb-md-0">
                         <div class="btn-group mr-2">
                             <button type="button" class="btn btn-sm btn-outline-secondary">Share</button>
-                            <button type="button" class="btn btn-sm btn-outline-secondary">Export</button>
                         </div>
-                        <button type="button" class="btn btn-sm btn-outline-secondary dropdown-toggle">
-                            <span data-feather="calendar"></span>
-                            This week
-                        </button>
                     </div>
                 </div>
                 <h2>索引</h2>
@@ -224,8 +216,9 @@
                     <hr>
         
                 </div> <!-- /container -->
+                <p>以下內容再IDLE模式下操作；</p>
                 <h3 id="6-1">6-1 一維串列的運作</h3>
-                <p>示範</p>
+                <p></p>
                 <pre class="wp-block-fm-prism line-numbers">
                         <code class="language-python">
                             >>> lst1 = []  #建立一空串列
@@ -234,6 +227,7 @@
                             >>> lst4 = [1, 2, 34.56, 'pineapple']
                         </code>         
                     </pre>
+                    <P></P>
                 <h4 id="6-1-1">6-1-1 [] 與 [start:end]</h4>
                 <pre class="wp-block-fm-prism line-numbers">
                     <code class="language-python">
@@ -249,8 +243,9 @@
                         [1, 2, 3, 4, 5]
                         >>>
                     </code> 
-                </pre>        
-                <h4 id="6-1-2">6-1-2 len</h4>
+                </pre> 
+                <p></p>       
+                <h4 id="6-1-2">6-1-2 len()</h4>
                 <p>利用len計算串列的長度</p>
                 <pre class="wp-block-fm-prism line-numbers">
                     <code class="language-python">
@@ -259,6 +254,7 @@
                         >>>
                     </code>         
                 </pre>
+                <p></p>
                 <h4 id="6-1-3">6-1-3 append 與 insert 方法</h4>
                 <pre class="wp-block-fm-prism line-numbers">
                     <code class="language-python">
@@ -273,6 +269,7 @@
                         [1, 4 ,2]
                     </code>         
                 </pre>
+                <p></p>
                 <h4 id="6-1-4">6-1-4 pop 與 remove 方法</h4>
                 <pre class="wp-block-fm-prism line-numbers">
                     <code class="language-python">
@@ -289,6 +286,7 @@
                         [1, 4]
                     </code>         
                 </pre>
+                <p></p>
                 <h4 id="6-1-5">6-1-5 count 與 index 方法</h4>
                 <pre class="wp-block-fm-prism line-numbers">
                     <code class="language-python">
@@ -305,6 +303,7 @@
                         1
                     </code>         
                 </pre>
+                <p></p>
                 <h4 id="6-1-6">6-1-6 sort 與 reverse 方法</h4>
                 <pre class="wp-block-fm-prism line-numbers">
                     <code class="language-python">
@@ -321,6 +320,7 @@
                         [5, 4, 2, 1]
                     </code>         
                 </pre>
+                <p></p>
                 <h4 id="6-1-7">6-1-7 in 與 not in</h4>
                 <pre class="wp-block-fm-prism line-numbers">
                     <code class="language-python">
@@ -332,6 +332,7 @@
                         True
                     </code> 
                 </pre>
+                <p></p>
                 <h4 id="6-1-8">6-1-8 sum、max、以及 min 函式</h4>
                 <pre class="wp-block-fm-prism line-numbers">
                     <code class="language-python">
@@ -345,6 +346,7 @@
                         1
                     </code> 
                 </pre>
+                <p></p>
                 <h4 id="6-1-9">6-1-9 + 與 *</h4>
                 <pre class="wp-block-fm-prism line-numbers">
                     <code class="language-python">
@@ -358,6 +360,7 @@
                         [1, 4, 1, 4]
                     </code> 
                 </pre>
+                <p></p>
                 <h4 id="6-1-10">6-1-10 + 與 *</h4>
                 <pre class="wp-block-fm-prism line-numbers">
                     <code class="language-python">
@@ -374,6 +377,7 @@
                         >>>
                     </code> 
                 </pre>
+                <p></p>
                 <h4 id="6-1-11">6-1-11 利用 for 印出串列所有的項目</h4>
                 <pre class="wp-block-fm-prism line-numbers">
                     <code class="language-python">
@@ -526,19 +530,41 @@
                 <h4>範例程式</h4>
                 <pre class="wp-block-fm-prism line-numbers">
                     <code class="language-python ">
-                        /Code/
+                        import random
+                        lotto = []
+                        n = 1
+                        while n <= 6:
+                            randNum = random.radiant(1,49)
+                            if randNum not in lotto:
+                                lotto.append(randNum)
+                                n += 1
+
+                        print("The lottery numbers are: \n", end = '')
+                        for i in lotto:
+                            print('%4d'%(i), end = ' ')
+                        print()
+
+                        lotto.sort()
+                        print('After sorting:' )
+                        for i in lotto:
+                            print('%4d'%(i), end = ' ')
+                        print()
                     </code>         
                 </pre>
                 <h4>輸出結果:</h4>
                 <pre class="wp-block-fm-prism line-numbers">
                     <code class="language-textile">
-                        /Result/
+                        The lottery numbers are: 
+                        2   26   14   23   34   46 
+                        After sorting:
+                        2   14   23   26   34   46 
                     </code>         
                 </pre>
                 <h3 id="6-2">6-2 二維串列的運作</h3>
-                <p>敘述</p>
+                <p>二維串列的ˊ運作與一維串列的運作很像斯。以下範例說明之。</p>
                 <h4 id="6-2-1">6-2-1 如何得知二維串列的列數與行數</h4>
-                <h4>範例程式</h4>
+                <p></p>
+                <h4>範例程式:</h4>
                 <pre class="wp-block-fm-prism line-numbers">
                     <code class="language-python">
                         lst2 = [[1, 2, 3], [4, 5 ,6]]
@@ -548,7 +574,8 @@
                         print(len(lst2[0]))
                     </code> 
                 </pre>
-                <h4>輸出結果</h4>
+                <p></p>
+                <h4>輸出結果:</h4>
                 <pre class="wp-block-fm-prism line-numbers">
                     <code class="language-textile">
                         [[1, 2, 3], [4, 5 ,6]]
@@ -557,9 +584,10 @@
                         3
                     </code> 
                 </pre>
-
+                <p></p>
                 <h4 id="6-2-2">6-2-2 如何加入一維元素於二維串列</h4>
-                <h4>範例程式</h4>
+                <p>先記利空字串，再用append([])建立一串列，此時就建立二維串列了。</p>
+                <h4>範例程式:</h4>
                 <pre class="wp-block-fm-prism line-numbers">
                     <code class="language-python">
                         import  random
@@ -574,7 +602,8 @@
                         print(lst2)
                     </code> 
                 </pre>
-                <h4>輸出結果</h4>
+                <p></p>
+                <h4>輸出結果:</h4>
                 <pre class="wp-block-fm-prism line-numbers">
                     <code class="language-textile">
                         Enter the number of row: 5
@@ -582,9 +611,10 @@
                         [[37, 17, 18], [32, 20, 9], [10, 21, 21], [17, 47, 44], [18, 6, 22]]
                     </code> 
                 </pre>
-                <p>內容</p>
+                <p></p>
                 <h4 id="6-2-3">6-2-3 列印二維串列的每一元素</h4>
-                <h4>範例程式</h4>
+                <p>利用for迴圈或者for...in迴圈，在指定串列的index即可印出所有內容，範例如下:</p>
+                <h4>範例程式:</h4>
                 <pre class="wp-block-fm-prism line-numbers">
                     <code class="language-python">
                         import  random
@@ -603,7 +633,8 @@
                             print()
                     </code> 
                 </pre>
-                <h4>輸出結果</h4>
+                <p></p>
+                <h4>輸出結果:</h4>
                 <pre class="wp-block-fm-prism line-numbers">
                     <code class="language-textile">
                         Enter the number of row: 5
@@ -630,10 +661,10 @@
                         lst[4][2] =    34
                     </code> 
                 </pre>
-
+                <p></p>
                 <h4 id="6-2-4">6-2-4 計算行與列的和</h4>
-                <p>內容</p>
-                <h4>範例程式</h4>
+                <p></p>
+                <h4>範例程式:</h4>
                 <pre class="wp-block-fm-prism line-numbers">
                     <code class="language-python">
                         for column in range(len(lst2[0])):
@@ -643,7 +674,7 @@
                         print('sum for column %d is %d'%(column, total))
                     </code> 
                 </pre>
-                <h4>輸出結果</h4>
+                <h4>輸出結果:</h4>
                 <pre class="wp-block-fm-prism line-numbers">
                     <code class="language-textile">
                         sum for column 0 is 77
@@ -651,8 +682,8 @@
                         sum for column 2 is 154
                     </code> 
                 </pre>
-                <p>內容</p>
-                <h4>範例程式</h4>
+                <p></p>
+                <h4>範例程式:</h4>
                 <pre class="wp-block-fm-prism line-numbers">
                     <code class="language-python">
                         for row in range(len(lst2)):
@@ -662,7 +693,7 @@
                         print('sum for row %d is %d'%(row, total))
                     </code> 
                 </pre>
-                <h4>輸出結果</h4>
+                <h4>輸出結果:</h4>
                 <pre class="wp-block-fm-prism line-numbers">
                     <code class="language-textile">
                         sum for row 0 is 103
@@ -672,8 +703,8 @@
                         sum for row 4 is 69
                     </code> 
                 </pre>
-                <p>內容</p>
-                <h4>範例程式</h4>
+                <p></p>
+                <h4>範例程式:</h4>
                 <pre class="wp-block-fm-prism line-numbers">
                     <code class="language-python">
                         for row in range(len(lst2)):
@@ -682,7 +713,7 @@
                         print('sum for row %d is %d'%(row, total))
                     </code> 
                 </pre>
-                <h4>輸出結果</h4>
+                <h4>輸出結果:</h4>
                 <pre class="wp-block-fm-prism line-numbers">
                     <code class="language-textile">
                         sum for row 0 is 103
