--- a/Python-Ch07 數組、集合、辭典.html
+++ b/Python-Ch07 數組、集合、辭典.html
@@ -72,10 +72,7 @@
                 </li>
 
             </ul>
-            <form class="form-inline my-2 my-lg-0">
-                <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-            </form>
+
         </div>
     </nav>
 
@@ -184,13 +181,8 @@
                     <h1 class="h2">Ch07 數組、集合、辭典</h1>
                     <div class="btn-toolbar mb-2 mb-md-0">
                         <div class="btn-group mr-2">
-                            <button type="button" class="btn btn-sm btn-outline-secondary">Share</button>
-                            <button type="button" class="btn btn-sm btn-outline-secondary">Export</button>
+                            <button type="button" class="btn btn-sm btn-outline-secondary">Share</button> 
                         </div>
-                        <button type="button" class="btn btn-sm btn-outline-secondary dropdown-toggle">
-                            <span data-feather="calendar"></span>
-                            This week
-                        </button>
                     </div>
                 </div>
                 <h2>索引</h2>
@@ -287,11 +279,12 @@
                         <class 'tuple1'>
                     </code> 
                 </pre>
-                
+                <p></p>
                 <h3 id="7-2">7-2 集合</h3>
-                <p>敘述</p>
-                <h4 id="7-2-1">7-2-1 如何得知二維串列的列數與行數</h4>
-                <h4>範例程式</h4>
+                <p></p>
+                <h4 id="7-2-1">7-2-1 建立集合</h4>
+                <p></p>
+                <h4>範例程式:</h4>
                 <pre class="wp-block-fm-prism line-numbers">
                     <code class="language-python">
                         '''集合是以大括號建立的，元素志堅以逗號隔開'''
@@ -312,9 +305,10 @@
                         {1, 2, 3}
                     </code> 
                 </pre>
-
+                <p></p>
                 <h4 id="7-2-2">7-2-2 集合的加入與刪除</h4>
-                <h4>範例程式</h4>
+                <p></p>
+                <h4>範例程式:</h4>
                 <pre class="wp-block-fm-prism line-numbers">
                     <code class="language-python">
                         '''使用add(x)將 x 加入集合中 '''
@@ -350,9 +344,10 @@
                 </pre>
 
                 <h4 id="7-2-3">7-2-3 集合的聯集、交集、差集，以及對稱差集</h4>
+                <p></p>
                 <table>
                     <h5>表7-1 集合的聯集、交集、差集，以及對稱差集</h5>
-                    <p>敘述內容</p>
+                    <p></p>
                     <hr>
                     <table class="table text-center col-6" border="3" width="80%" cellspacing="5" cellpading="5" >
                         <thead class="thead-light">
@@ -406,7 +401,7 @@
                         
                     </code> 
                 </pre>
-                <h4>輸出結果</h4>
+                <h4>輸出結果:</h4>
                 <pre class="wp-block-fm-prism line-numbers">
                     <code class="language-textile">
                         set20 = {1, 6, 8, 10, 20}
@@ -419,8 +414,8 @@
                 </pre>
 
                 <h4 id="7-2-4">7-2-4 子集合、超集合，以及 == 和 !=</h4>
-                <p>內容</p>
-                <h4>範例程式</h4>
+                <p></p>
+                <h4>範例程式:</h4>
                 <pre class="wp-block-fm-prism line-numbers">
                     <code class="language-python">
                         set15 = {1, 3, 8, 10}
@@ -438,7 +433,7 @@
                         print('set15.issuperset(set20)', b)
                     </code> 
                 </pre>
-                <h4>輸出結果</h4>
+                <h4>輸出結果:</h4>
                 <pre class="wp-block-fm-prism line-numbers">
                     <code class="language-textile">
                         set15 = {8, 1, 10, 3}
@@ -449,8 +444,10 @@
                         set15.issuperset(set20) True
                     </code> 
                 </pre>
-                <p>集合的相等性</p>
-                <h4>範例程式</h4>
+                <p></p>
+                <h5>集合的相等性</h5>
+                <p></p>
+                <h4>範例程式:</h4>
                 <pre class="wp-block-fm-prism line-numbers">
                     <code class="language-python">
                         set15 = {1, 3, 8, 10}
@@ -470,7 +467,7 @@
                         print('set20 != set30 :', b)
                     </code> 
                 </pre>
-                <h4>輸出結果</h4>
+                <h4>輸出結果:</h4>
                 <pre class="wp-block-fm-prism line-numbers">
                     <code class="language-textile">
                         set15 = {8, 1, 10, 3}
@@ -482,10 +479,14 @@
                         set20 != set30 : False
                     </code> 
                 </pre>
+                <p></p>
                 <h3 id="7-3">7-3 辭典</h3>
+                <p></p>
                 <p>辭典(dictionary)由一鍵值(key)和數值(value)所組成的數對。</p>
+                <P></P>
                 <h4 id="7-3-1">7-3-1 建立一辭典</h4>
-                <h4>範例程式</h4>
+                <p></p>
+                <h4>範例程式:</h4>
                 <pre class="wp-block-fm-prism line-numbers">
                     <code class="language-python">
                         '''建立一個空字典'''
@@ -494,8 +495,10 @@
                         dict10 = {'Taipei':'101', 'Paris':'Tour Eiffel', 'London':'Big Ben'}
                     </code> 
                 </pre>
+                <p></p>
                 <h4 id="7-3-2">7-3-2 辭典的運作</h4>
-                <h4>範例程式</h4>
+                <p></p>
+                <h4>範例程式:</h4>
                 <pre class="wp-block-fm-prism line-numbers">
                     <code class="language-python">
                         '''建立一個空字典'''
