Signed-off-by: J.J.Ding <louis7012161@gmail.com> Update

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                     </ul>
                     <p><a class="btn btn-secondary" href="python.html" role="button">View details &raquo;</a></p>
                 </div>
-                <div class="zone" style="background-image:url(../imges/icons8-Java-96.png);">
+                <div class="zone" style="background-image:url(/../imges/icons8-java-96.png);">
                     <h2>Java</h2>
                     <ul>                        
                         <li>施工中...</li>
