Signed-off-by: J.J.Ding <louis7012161@gmail.com> update

--- a/Python-Ch01 基本程式設計.html
+++ b/Python-Ch01 基本程式設計.html
@@ -770,6 +770,7 @@
     <!--程式碼的js-->
     <script src="/javascripts/prism.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/code-line"></script>
+    <script src="javascripts/python.js"></script>
 </body>
 
 </html>
