--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <script>window.jQuery || document.write('<script src="/docs/4.4/assets/js/vendor/jquery.slim.min.js"><\/script>')</script>
     <script src="bootstrap-4.4.1-dist/js/bootstrap.bundle.min.js" integrity="sha384-6khuMg9gaYr5AxOqhkVIODVIvm9ynTT5J4V1cfthmT+emCG6yVmEZsRHdxlotUnm"
     crossorigin="anonymous"></script>
+    
 
 
     <style>
@@ -128,6 +129,7 @@
     <footer class="container">
         <p>E-mail:louis70121@livemail.tw</p>
     </footer>
+    <script src="javascripts/index.js"></script>
 </body>
 
 </html>
