--- a/python.html
+++ b/python.html
@@ -144,7 +144,7 @@
                         </li>
                     </ul>
 
-                    <a class="nav-link disable" href="#">
+                    <a class="nav-link " href="#">
                         <span data-feather="home"></span>網頁資料擷取與分析 <span class="sr-only">(current)</span>
                     </a>
                     <ul class="nav flex-column mb-2">
@@ -264,6 +264,7 @@
     <!--程式碼的js-->
     <script src="/javascripts/prism.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/code-line"></script>
+    <script src="javascripts/python.js"></script>
 </body>
 
 </html>
