--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>HomePage</title>   
 
     <!-- Bootstrap core CSS -->
-    <link href="bootstrap-4.4.1-dist\css\bootstrap.min.css" rel="stylesheet" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link href="/bootstrap-4.4.1-dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="/css/jumbotron.css" rel="stylesheet">
     <link href="/css/prism.css" rel="stylesheet">
 
@@ -15,16 +15,12 @@
     <link rel="apple-touch-icon" href="/docs/4.4/assets/img/favicons/apple-touch-icon.png" sizes="180x180">
     <link rel="icon" href="/docs/4.4/assets/img/favicons/favicon-32x32.png" sizes="32x32" type="image/png">
     <link rel="icon" href="/docs/4.4/assets/img/favicons/favicon-16x16.png" sizes="16x16" type="image/png">
-    <!--<link rel="manifest" href="/docs/4.4/assets/img/favicons/manifest.json">-->
     <link rel="mask-icon" href="/docs/4.4/assets/img/favicons/safari-pinned-tab.svg" color="#563d7c">
-    <link rel="icon" href="/docs/4.4/assets/img/favicons/favicon.ico">
     <meta name="msapplication-config" content="/docs/4.4/assets/img/favicons/browserconfig.xml">
     <meta name="theme-color" content="#563d7c">
-    <script src="jquery/jquery-3.4.1.slim.min.js"  integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
-    crossorigin="anonymous"></script>
+    <script src="jquery/jquery-3.4.1.slim.min.js"></script>
     <script>window.jQuery || document.write('<script src="/docs/4.4/assets/js/vendor/jquery.slim.min.js"><\/script>')</script>
-    <script src="bootstrap-4.4.1-dist/js/bootstrap.bundle.min.js" integrity="sha384-6khuMg9gaYr5AxOqhkVIODVIvm9ynTT5J4V1cfthmT+emCG6yVmEZsRHdxlotUnm"
-    crossorigin="anonymous"></script>
+    <script src="/bootstrap-4.4.1-dist/js/bootstrap.bundle.min.js" ></script>
     
 
 
